--- a/index.html
+++ b/index.html
@@ -87,15 +87,16 @@
         </div>
       </li>
     </ul>
+    <hr class="border">
   </section>
-  <hr>
+
   <!--О КОМПАНИИ (СЛЕВА)-->
   <section class="about">
     <div class="about_left">
       <h2 class="visually-hidden">О компании</h2>
       <p class="about_header">Мы — маленькая,
         но гордая дизайн-студия из Краснодара.</p>
-      <p class="kontent_text">Исповедуем принципы минимализма и чистоты.
+      <p class="about_kontent_text">Исповедуем принципы минимализма и чистоты.
         Ставим математический рассчет превыше креатива.
         Работаем непокладая рук как роботы.</p>
       <p class="kontent_text_bold">Выполняем заказы на разработку:</p>
@@ -109,46 +110,50 @@
     <div class="about_right">
       <h2 class="visually-hidden">Статистика</h2>
       <img src="img/nerds-picture.png" alt="Nerds" width="360" height="208">
-      <p class="kontent_text_bold">с 2004 года Любим точность во всем:</p>
+      <p class="kontent_text_bold_center">с 2004 года Любим точность во всем:</p>
       <ul class="about_stat">
-        <li><span class="stat_number_bold">146<sup>%</sup></span>
+        <li><span class="stat_number_bold">146<sup>%</sup></span><br>
           Уровень самоотдачи
         </li>
-        <li><span class="stat_number_bold">100<sup>%</sup></span>
+        <li><span class="stat_number_bold">100<sup>%</sup></span><br>
           Соблюдение сроков
         </li>
-        <li><span class="stat_number_bold">50<sup>%</sup></span>
+        <li><span class="stat_number_bold">50<sup>%</sup></span><br>
           Минимальная предоплата
         </li>
       </ul>
     </div>
   </section>
+
   <!--Партнёры (серые лого)-->
   <div class="logo_partners">
-    <hr>
+    <hr class="border">
     <ul class="partners_list">
       <li>
         <a href="htmlacademy.ru">
           <img src="img/htmlacdemy-logo.png" alt="htmlacademy.ru" width="199" height="68">
         </a>
       </li>
+      <hr>
       <li>
         <a href="">
           <img src="img/borodinsli-logo.png" alt="Borodinsky" width="209" height="90">
         </a>
       </li>
+      <hr>
       <li>
         <a href="">
           <img src="img/pink-logo.png" alt="Pink" width="185" height="52">
         </a>
       </li>
+      <hr>
       <li>
         <a href="">
           <img src="img/mishka-logo.png" alt="Mishka" width="173" height="84">
         </a>
       </li>
     </ul>
-    <hr>
+    <hr class="border">
   </div>
 </main>
 <!--Карта фоном + форма для связи-->
@@ -180,8 +185,9 @@
 
 <!--FOOTER иконки соц.сети-->
 <footer>
+  <div class="footer_kontent">
   <div class="social">
-    <a href="" class="social_link_vk">
+    <a href="" class="socisl_link_vk">
       <div class="social_list">
         <div class="vk"></div>
       </div>
@@ -200,6 +206,7 @@
   <div class="footer_txt">
     <p class="footer_txt_header">Давайте дружить, это выгодно!</p>
     <p class="footer_txt_p">Скидка 10% для друзей из социальныхсетей.</p>
+  </div>
   </div>
 </footer>
 </body>
