--- a/store.html
+++ b/store.html
@@ -122,7 +122,7 @@
           <a href="">
             <img src="img/img-sedona-jpg.png" alt="Sedona" width="360" height="576">
           </a>
-          <div class="hidden-prod-inf">
+          <div class="hidden-prod-inf visually-hidden">
             <p class="prod-name">Sedona</p>
             <p class="prod-description">Информационный сайт
               для туристов</p>
@@ -131,12 +131,12 @@
         </div>
 
         <!--2-->
-        <div class="product-store-item">
+        <div class="product-store-item" id="pinkapp_id">
           <img src="img/browser.png" alt="browser" width="360" height="40" class="browser-img">
           <a href="">
             <img src="img/img-pink-jpg.png" alt="Pink" width="360" height="576">
           </a>
-          <div class="hidden-prod-inf">
+          <div class="hidden-prod-inf visually-hidden">
             <p class="prod-name">Pink App</p>
             <p class="prod-description">Продуктовый лендинг
               приложения для iOS и Android</p>
@@ -144,12 +144,12 @@
           </div>
         </div>
         <!--3-->
-        <div class="product-store-item">
+        <div class="product-store-item" id="barber_id">
           <img src="img/browser.png" alt="browser" width="360" height="40" class="browser-img">
           <a href="">
             <img src="img/img-barbershop-jpg.png" alt="Barbershop" width="360" height="576">
           </a>
-          <div class="hidden-prod-inf">
+          <div class="hidden-prod-inf visually-hidden">
             <p class="prod-name">Barbershop</p>
             <p class="prod-description">Сайт салона красоты. <br>
               Для мужчин, да.</p>
@@ -158,12 +158,12 @@
         </div>
 
         <!--4-->
-        <div class="product-store-item">
+        <div class="product-store-item" id="mishka_id">
           <img src="img/browser.png" alt="browser" width="360" height="40" class="browser-img">
           <a href="">
             <img src="img/img-mishka-jpg.png" alt="Mishka" width="360" height="576">
           </a>
-          <div class="hidden-prod-inf">
+          <div class="hidden-prod-inf visually-hidden">
             <p class="prod-name">Mishka</p>
             <p class="prod-description">Интернет-магазин
               вязаных игрушек</p>
@@ -171,12 +171,12 @@
           </div>
         </div>
         <!--5-->
-        <div class="product-store-item">
+        <div class="product-store-item" id="aplus_id">
           <img src="img/browser.png" alt="browser" width="360" height="40" class="browser-img">
           <a href="">
             <img src="img/img-aplus-jpg.png" alt="Aplus" width="360" height="576">
           </a>
-          <div class="hidden-prod-inf">
+          <div class="hidden-prod-inf visually-hidden">
             <p class="prod-name">A Plus</p>
             <p class="prod-description">Лендинг курсов повышения квалификации</p>
             <button type="button" name="aplus" id="aplus_prod" class="store-buy-button">9 900 РУБ.</button>
@@ -184,12 +184,12 @@
         </div>
 
         <!--6-->
-        <div class="product-store-item">
+        <div class="product-store-item" id="kvast_id">
           <img src="img/browser.png" alt="browser" width="360" height="40" class="browser-img">
           <a href="">
             <img src="img/img-kvast-jpg.png" alt="Kvast" width="360" height="576">
           </a>
-          <div class="hidden-prod-inf">
+          <div class="hidden-prod-inf visually-hidden">
             <p class="prod-name">Кваст</p>
             <p class="prod-description">Промо-сайт производителя
               крафтового кваса</p>
@@ -255,6 +255,6 @@
   </div>
 </footer>
 <!--ФОРМА ОТПРАВКИ ПИСЬМА-->
-
+<script src="js/script.js"></script>
 </body>
 </html>
