--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
     </ul>
     <hr class="border">
   </section>
-
   <!--О КОМПАНИИ (СЛЕВА)-->
   <section class="about">
     <div class="about-left">
@@ -218,6 +217,6 @@
   </div>
 </footer>
 <!--ФОРМА ОТПРАВКИ ПИСЬМА-->
-
+<script src="js/script.js"></script>
 </body>
 </html>
